--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
- <body>
+ <body class="d-flex flex-column vh-100">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -22,7 +22,7 @@
       <span class="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ml-auto d-flex align-items-center" style="height:40px;">
+      <ul class="navbar-nav ml-auto d-flex align-items-center">
       <% if customer_signed_in? %>
       <li>
        <%= link_to "マイページ",customers_my_page_path,class: 'fas fa-home nav-link text-light' %>
