--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,21 +8,27 @@
        <th>商品名</th>
        <th>単価（税込）</th>
        <th>数量</th>
+       <th></th>
        <th>小計</th></th>
        </tr>
       </thead>
       <tbody>
    <% @cart_items.each do |cart_item| %>
-　 <tr> <!--<div class="col-auto">-->
+　 <tr>
      <td><%= cart_item.item.name %></td>
-     <td><%= cart_item.item.taxin_price.to_s( :delimited) %>円</td>
-     <td><%= cart_item.amount %></td>
-     <td><%= cart_item.subtotal %></td>
-    <!--</div>--></tr>
-   <!--</div>-->
+     <td><%= cart_item.item.taxin_price.to_s( :delimited) %>円</td> <!--税込の単価表示-->
+         <%= form_with model: cart_item,local:true do |f| %> <!--セレクトボックスで数量を表示する-->
+     <td><%= f.select :amount, *[1..10] %></td>
+　   <td><%= f.submit '変更',class: "btn btn-sm btn-primary" %></td>
+   　<% end %>
+     <td><%= cart_item.subtotal.to_s( :delimited) %>円</td> <!--小計の表示-->
+     <td><%= link_to "削除",cart_item_path(cart_item.id),method: :delete,class: "btn btn-sm btn-danger" %></td>
+  </tr>
    <% end %>
+
 <td>合計金額<%= @total.to_s(:delimited) %>円</td>
    </tbody>
 </table>
-   <!--</div>-->
+   <%= link_to "買い物を続ける",items_path,class: "btn btn-sm btn-primary" %></br></br>
+   <%= link_to "カートを空にする",cart_items_destroy_all_path,method: :delete,"data-confirm" => "本当にカートを空にしますか？",class: "btn btn-sm btn-danger" %>
 </div>
