--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-item" style="height:1200px;">
+<div class="container-item" style="height:auto;">
  </br>
   <h2 class="text-center font-weight-bold"><ins>商品一覧 (全<%= Item.count %>件)</ins></h2>
 　  <div class="row my-5 d-flex justify-content-center">
