--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -4,10 +4,35 @@
   <%= form_with model:@order,url:'/orders/new',local:true do |f| %>
   <%= f.radio_button :payment_method, "credit_card" %>
   <%= f.label :payment_method, "クレジットカード" %>
-
+  </br>
   <%= f.radio_button :payment_method, "transfer" %>
   <%= f.label :payment_method, "銀行振込" %>
-<% end %>
-  <h4>お届け先</h4>
- ご自身の住所
- 
+
+  <h4>お届け先</h4></br>
+  <h5>ご自身の住所</h5>
+  <%= @customer.postal_code %>
+  <%= @customer.address %></br>
+  <%= @customer.full_name %></br>
+  </br>
+  <h5>登録済み住所から選択</h5>
+  <%= f.select :id, options_from_collection_for_select(Address.all, :id, :full_address) %>
+  <% end %>
+  <h5>新しいお届け先</h5>
+
+  <%= form_with model: @address,url: "/addresses",local: true do |f| %>
+　 <div class="form-group">
+       <%= f.label :郵便番号（ハイフンなし） %>
+       <%= f.text_field :postal_code,autofocus: true, style: "width:20%",placeholder:"0000000", class: 'form-control' %>
+     </div>
+     <div class="form-group">
+       <%= f.label :住所 %>
+       <%= f.text_area :address,autofocus: true,style: "width:30%", placeholder:"東京都渋谷区代々木神園町0-0", class: 'form-control' %>
+     </div>
+     <div class="form-group">
+       <%= f.label :宛名 %>
+       <%= f.text_area :name,autofocus: true, style: "width:20%",placeholder:"昭和花子", class: 'form-control' %>
+     </div>
+  <div class="actions">
+   <%= f.submit "新規登録",class: "btn btn-primary" %>
+  </div>
+  <% end %><br/>
